Version History
===============

0.2.4.2
-------
* Renamed 'Scene Assembly' to 'Layout' in VersionTypes.

* Added support for Eyeon Fusion.

* Fixed Houdini environment.

* ``version_creator`` UI now lists users in alphabetical order.

0.2.4.1
-------
* Fixed titles of ``version_creator`` and ``status_manager`` UIs.

* Added screenshots to the documentation.

0.2.4
-----
* Added :attr:`~oyProjectManager.core.models.Asset.type` attribute to the
  :class:`~oyProjectManager.core.models.Asset` class. The main intention is to
  be able to distinguish 'Props', 'Environment' etc. types of assets from each
  other.

* Added :attr:`~oyProjectManager.core.models.Version.status` attribute
  to the :class:`~oyProjectManager.core.models.Version` class. This attribute
  will help to track the status of the
  :class:`~oyProjectManager.core.models.Asset` or
  :class:`~oyProjectManager.core.models.Shot` version.

* Added a new UI called ``status_manager`` for viewing the Assets and Shots
  statuses.

* Added a new column to the ``version_creator`` UI which shows the status of
  the saved version.

* Added a new class called :class:`~oyProjectManager.core.models.Client` to
  manage :class:`~oyProjectManager.core.models.Project` clients.

* Added a new attribute :attr:`~oyProjectManager.core.models.Project.client` to
  the :class:`~oyProjectManager.core.models.Project` class to manage
  :class:`~oyProjectManager.core.models.Client`\ s.

* Updated ``version_creator`` UI, it now shows the Shots in correct numerical
  order.

* Updated ``version_creator`` UI, it is now possible to change the Status or
  Browse the outputs of a Version by right clicking on the Previous Versions
  TableWidget.

* :attr:`~oyProjectManager.core.models.Version.status` is now comparable with
  long status names, so comparing "WTS" with "Waiting To Start" will return
  True.

* Added the ``query`` method as a class method to the Base class in the