@@ -15,3 +15,4 @@ docs/source/static/images/*
 .~*
 .DS_Store
 .coverage
+*.swp
